--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
 .container {
   max-width: 1050px;
   margin: 0 auto;
+  padding: 0px 5px;
 }
 
 .main-title {
@@ -54,10 +55,11 @@ body {
   font-family: "Open Sans";
   font-weight: 400;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 150%;
   text-align: center;
   color: #737373;
   letter-spacing: 0.2px;
+  text-align: center;
 }
 
 .main-text {
@@ -133,7 +135,6 @@ body {
 
 .buttons {
   display: flex;
-  width: 93px;
   align-items: center;
 }
 
@@ -166,11 +167,9 @@ body {
   width: 40px;
   cursor: pointer;
 }
-.button_stairs {
+.button-stairs {
   display: none;
-  cursor: pointer;
-  position: absolute;
-  right: 2.38%;
+  background: url(./img/stairs_icon.svg) no-repeat center center;
 }
 
 .button-search {
@@ -341,7 +340,7 @@ body {
 
 .subtitle-container {
   margin-top: 10px;
-  width: 431px;
+  max-width: 431px;
   height: 40px;
 }
 
@@ -616,13 +615,11 @@ body {
   font-weight: 700;
   font-size: 40px;
   line-height: 125%;
-  text-align: center;
   letter-spacing: 0.2px;
 }
 
 .contact-form_rows {
   width: 597px;
-  height: 50px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -683,7 +680,6 @@ body {
 .contact-button {
   background: #784f33;
   width: 215px;
-  margin-bottom: 2px;
 }
 
 .contact-consultation {
@@ -692,7 +688,7 @@ body {
   align-content: center;
   max-width: 1244px;
   background: #fff;
-  height: 143px;
+  min-height: 143px;
 }
 .request-container {
   display: flex;
@@ -700,10 +696,11 @@ body {
   width: 1052px;
 }
 
-.request-titles-container {
+#request-titles-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding: 0px;
 }
 
 .request-title {
@@ -715,16 +712,18 @@ body {
   font-weight: 400;
 }
 
-.button-container-contact {
+#button-container-contact {
   display: flex;
   width: 236px;
   justify-content: center;
+  padding: 0px;
 }
 
 .contact-us {
   width: 158px;
   height: 58px;
-  margin-top: 0;
+  margin-top: 0px;
+  padding: 0px;
 }
 .footer {
   background: #252b42;
@@ -774,13 +773,15 @@ body {
   display: flex;
   justify-content: space-between;
   width: 1041px;
+  height: 100%;
+  align-items: center;
 }
 
 .contact-block-footer {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   width: 148px;
+  justify-content: space-between;
 }
 
 .get-in-touch {
@@ -825,9 +826,9 @@ body {
 .input-button-main {
   position: absolute;
   width: 117px;
-  height: 57px;
+  height: 58px;
   right: 0px;
-  bottom: 19px;
+  bottom: 21px;
 
   background: #d0a144;
   border: 1px solid #e6e6e6;
@@ -855,10 +856,4 @@ body {
   line-height: 171%;
   letter-spacing: 0.2px;
   color: #bdbdbd;
-}
-
-@media screen and (max-width: 420px) {
-  .container {
-    max-width: 420px;
-  }
 }
